spec/invalid/not_type_id.expr.disassembled
VERSION 0800
----
0000 GET BUILTIN        16 == 'not'
0003 GET BUILTIN        14 == 'type'
0006 GET BUILTIN         0 == 'id'
0009 CALL             (1 args)
0011 CALL             (1 args)
